--- a/index.ipynb
+++ b/index.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = 'January'"
+    "travel_month = \"January\""
    ]
   },
   {
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = "
+    "number_of_weeks = '5'"
    ]
   },
   {
