--- a/index.ipynb
+++ b/index.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = NON"
+    "travel_month = 'None'"
    ]
   },
   {
